<resources>
    <string name="app_name">WeightViz</string>
    <!--    header-->
    <string name="tvTitle">Weight Viz</string>
    <string name="EnterData_tvTitle">Enter Data</string>

    <!-- Action Bar Titles -->
    <string name="MainActivity_title">Weight Viz - Main</string>
    <string name="EnterData_title">Weight Viz - Enter Data</string>
    <string name="DisplayData_title">Weight Viz - Display Data</string>
    <string name="Settings_title">Weight Viz - Settings</string>
    <string name="SecondActivity_title">Weight Viz - Second Activity</string>


    <!-- Main Activity -->
    <string name="btnDeleteAllData">Delete All Data</string>
    <string name="btnRemoveLastEntry">Remove Last Entry</string>
    <string name="num_of_entries_0">%1$d Entries</string>
    <string name="num_of_entries_1">%1$d Entry</string>
    <string name="num_of_entries_plural">%1$d Entries</string>
    <string name="tv_weight">%1$.1f lbs</string>
    <string name="tv_avg_weight">%1$.1f lbs</string>
    <string name="tv_min_max_weight">%1$.1f - %2$.1f</string>

    <string name="invalidDateInput">Invalid Date Input</string>

    <!-- Enter Data -->
    <string name="etDate_hint">Date</string>
    <string name="etWeight_hint">Weight in lbs</string>
    <string name="btnSubmit">Submit</string>
    <!-- EnterData Activity -->
    <!-- DisplayData Activity -->
    <string name="legendWeightInLbs">Weight in lbs</string>
    <string name="legendHighestWeight">Highest Weight</string>
    <string name="legendAverageWeight">Average Weight</string>
    <string name="legendLowestWeight">Lowest Weight</string>
    <string name="btnDisplayAll">All</string>
    <string name="btnDisplayMonthly">Monthly</string>
    <string name="btnDisplayFuture">Future</string>
    <!--    old display format start-->
    <string name="tvIDs_start">ID:</string>
    <string name="tvDates_start">Date:</string>
    <string name="tvWeights_start">Avg Weight:</string>
    <!-- navbar -->
    <string name="btnMain">Main</string>
    <string name="btnEnterData">Enter Data</string>
    <string name="btnDisplayData">Display Data</string>
    <!--    display tab bar-->

    <!-- Sorting -->
    <string name="btnSortByOld">Oldest</string>
    <string name="btnSortByRecent">Recent</string>
    <string name="btnSortByNew">Newest</string>

    <!-- Menu Settings -->
    <string name="menu_settings">Settings</string>
    <string name="menuRandomTheme">Random Theme</string>
    <string name="menu_one">One</string>
    <string name="menu_two">Two</string>
    <string name="menu_activity_one">Activity One</string>
    <string name="menu_activity_two">Activity Two</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="exit">Exit</string>
    <string name="menu_main_activity">Main</string>
    <string name="menu_enter_data_activity">Enter Data</string>
    <string name="menu_display_data_activity">Display</string>
    <string name="menu_second_activity">Second Activity</string>

    <!-- idk -->
    <string name="invalid_weight_or_date">Please enter a valid weight and date</string>

    <!-- Settings Activity -->
    <string name="tvColorScheme">Colour Scheme:</string>
    <string-array name="txtColorScheme">
        <item>Gray</item>
        <item>Blue</item>
        <item>Indigo</item>
        <item>Purple</item>
        <item>Pink</item>
        <item>Red</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Teal</item>
        <item>Cyan</item>
    </string-array>
    <string name="tvColorMode">Colour Mode:</string>
    <string-array name="txtColorMode">
        <item>Auto</item>
        <item>Light Mode</item>
        <item>Dark Mode</item>
    </string-array>
    <string name="tvLanguage">Language:</string>
    <string-array name="txtLanguage">
        <item>System Default</item>
        <item>English</item>
        <item>French</item>
    </string-array>
    <string name="btnSaveSettings">Save</string>
    <string name="currentColourScheme">Current colour scheme: %1$s</string>
    <string name="colorSchemeChanged">Colour scheme change to: %1$s</string>
    <string name="randomColorSchemeToast">Colour randomly set to: %1$s</string>

    <string name="settingsUpdatedToast">Settings updated</string>
    <string name="mainToast">Main</string>
    <string name="enterDataToast">Enter Data</string>
    <string name="displayDataToast">Display Data</string>
    <string name="settingsToast">Settings</string>

    <!-- Delete All Entries Warning -->
    <string name="alertDeleteAllTitle">Delete All Data</string>
    <string name="alertDeleteAllMessage">Are you sure you want to delete all data?</string>
    <string name="alertDeleteAllPositive">Delete</string>
    <string name="alertDeleteAllPositiveToast">All data deleted</string>
    <string name="alertDeleteAllNegative">Cancel</string>
    <string name="alertDeleteAllNegativeToast">Cancel deletion</string>

    <string name="entryAddedToast">Entry added</string>
    <string name="entryDeletedToast">Entry deleted</string>

    <string name="deleteContentDescription">Delete</string>

    <string name="date_format_month_year">%2$s %1$d</string>
    <string name="date_format_full">%2$s %3$s, %1$d</string>
    <string-array name="months">
        <item> </item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="MON">
        <item> </item>
        <item>JAN</item>
        <item>FEB</item>
        <item>MAR</item>
        <item>APR</item>
        <item>MAY</item>
        <item>JUN</item>
        <item>JUL</item>
        <item>AUG</item>
        <item>SEP</item>
        <item>OCT</item>
        <item>NOV</item>
        <item>DEC</item>
    </string-array>
    <string-array name="days">
        <item></item>
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
        <item>4th</item>
        <item>5th</item>
        <item>6th</item>
        <item>7th</item>
        <item>8th</item>
        <item>9th</item>
        <item>10th</item>
        <item>11th</item>
        <item>12th</item>
        <item>13th</item>
        <item>14th</item>
        <item>15th</item>
        <item>16th</item>
        <item>17th</item>
        <item>18th</item>
        <item>19th</item>
        <item>20th</item>
        <item>21st</item>
        <item>22nd</item>
        <item>23rd</item>
        <item>24th</item>
        <item>25th</item>
        <item>26th</item>
        <item>27th</item>
        <item>28th</item>
        <item>29th</item>
        <item>30th</item>
        <item>31st</item>
    </string-array>
    <string name="tvDatabase">Database</string>

</resources>