<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    tools:context=".SecondActivity">

    <include
        layout="@layout/navbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayoutEnterData"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/etDate_hint"
            android:inputType="datetime|date" />

        <EditText
            android:id="@+id/etWeight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/etWeight_hint"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="?attr/colorPrimary"
            android:text="@string/btnSubmit"
            android:textColor="?attr/colorOnPrimary" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvFeedback"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/tvFeedback"
        android:textAlignment="center"
        android:textColor="?android:attr/textColorTertiary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutEnterData"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvIds"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/tvIDs_start"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/tvDates"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFeedback"
        app:layout_constraintWidth_percent=".1" />

    <TextView
        android:id="@+id/tvDates"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tvDates_start"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/tvWeights"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvIds"
        app:layout_constraintTop_toBottomOf="@+id/tvFeedback"
        app:layout_constraintWidth_percent=".3" />

    <TextView
        android:id="@+id/tvWeights"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/tvWeights_start"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvDates"
        app:layout_constraintTop_toBottomOf="@+id/tvFeedback"
        app:layout_constraintWidth_percent=".3" />

    <Button
        android:id="@+id/btnDeleteAllEntries"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="?attr/colorError"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/btnDeleteAllEntries"
        android:textColor="?attr/colorOnError"
        app:layout_constraintEnd_toStartOf="@+id/btnRemoveLastEntry"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDates" />

    <Button
        android:id="@+id/btnRemoveLastEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="?attr/colorSecondary"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/btnRemoveLastEntry"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnDeleteAllEntries"
        app:layout_constraintTop_toBottomOf="@+id/tvDates" />


</androidx.constraintlayout.widget.ConstraintLayout>